Add input/output tokens

--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@
         <button id="usage-toggle" class="usage-toggle" aria-label="Toggle usage breakdown">▼</button>
       </div>
       <div class="usage-totals">
-        <span class="usage-item">Total Tokens: <span id="total-tokens">0</span></span>
-        <span class="usage-item">Total Cost: $<span id="total-cost">0.00</span></span>
+        <span class="usage-item">Input: <span id="total-input-tokens">0</span></span>
+        <span class="usage-item">Output: <span id="total-output-tokens">0</span></span>
+        <span class="usage-item">Total: <span id="total-tokens">0</span></span>
+        <span class="usage-item">Cost: $<span id="total-cost">0.00</span></span>
       </div>
       <div id="usage-breakdown" class="usage-breakdown" style="display: none;">
         <!-- Per-model breakdown will be displayed here -->
